Archive2/80/317241d1c6b885/output
main.cpp:5:1: error: 'sum' does not name a type
 sum=0;
 ^
main.cpp:6:1: error: 'count' does not name a type
 count=0;
 ^
main.cpp:7:1: error: expected unqualified-id before 'for'
 for(count=0;count<50;count=count+1)
 ^
main.cpp:7:13: error: 'count' does not name a type
 for(count=0;count<50;count=count+1)
             ^
main.cpp:7:22: error: 'count' does not name a type
 for(count=0;count<50;count=count+1)
                      ^
