Archive2/80/317241d1c6b885/main.cpp
#include <iostream>
#include <string>
int count;
float sum;
sum=0;
count=0;
for(count=0;count<50;count=count+1)
sum=sum+count;



